--- a/netlify.toml
+++ b/netlify.toml
@@ -4,7 +4,16 @@
 
 [build.environment]
   NODE_VERSION = "18"
-  
+  NEXT_TELEMETRY_DISABLED = "1"
+
+[[plugins]]
+  package = "@netlify/plugin-nextjs"
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
 # Specify the Next.js target environment
 [build.processing.html]
   pretty_urls = false 
